servicio ajax a medias

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <input class="imput-rapi" type="text" name="code" placeholder="code">
               </div>
               <div class="medium-8 columns">
-                <input class="success button imput-rapi-button" type="submit" name="search" value="Play" >
+                <input id="search" class="success button imput-rapi-button" type="button" name="search" value="Play" >
               </div>
 
             </form>
